Load JSON and diplay bank atttributes

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -13,13 +13,14 @@
 
 <head>
     <script src="browser_action.js"></script>
+    <script src="../jquery-3.2.1.min.js"></script>
 </head>
 
 <div id="mainPopup">
     <h1>Hello!</h1>
     <button id="mainButton">Get page</button>
     <div id="text-holder">
-        ASD
+        
     </div>
 </div>
 
