fixed "if" block and jQuery directory

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -13,7 +13,7 @@
 
 <head>
     <script src="browser_action.js"></script>
-    <script src="../jquery-3.2.1.min.js"></script>
+    <script src="../../js/jquery-3.2.1.min.js"></script>
 </head>
 
 <div id="mainPopup">
