--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -38,7 +38,6 @@
 </style>
 
 <head>
-    <script src="browser_action.js"></script>
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/mdl/material.min.js"></script>
     <link rel="stylesheet" href="../../js/mdl/material.min.css"></script>
@@ -48,12 +47,7 @@
     <span id="appinfo"><span id="appname">Autopac</span> <span id="version">0.0.0</span></span>
 
     <div id="mainPopup">
-        <h1>Hello!</h1>
-        <div id="main-button-div" class="mdl-dialog__content">
-            <button id="mainButton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Get page</button>
-        </div>    
-        <div id="text-holder" class="mdl-dialog__content"></div>
-        <div id="fill-button-div" class="mdl-dialog__content"></div>
+        <h1>Hello Fintual!</h1>
     </div>
 </body>
 
