style(fill button): new fill form button

--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -53,7 +53,7 @@
             <button id="mainButton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Get page</button>
         </div>    
         <div id="text-holder" class="mdl-dialog__content"></div>
-        <div id="fill-button-div" class="mdl-dialog__content"></div>
+        <div id="button-div" class="mdl-dialog__content"></div>
     </div>
 </body>
 
