--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -50,8 +50,23 @@
     <div id="mainPopup">
         <h1>Hello!</h1>
         <div id="main-button-div" class="mdl-dialog__content">
-            <button id="mainButton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Get page</button>
-        </div>    
+            <button id="mainButton" 
+                    class="mdl-button 
+                           mdl-js-button 
+                           mdl-button--raised 
+                           mdl-js-ripple-effect 
+                           mdl-button--accent">
+                Get page
+            </button>
+        </div>
+        <button id="fillFormBtn" 
+            class="mdl-button 
+               mdl-js-button 
+               mdl-button--raised 
+               mdl-js-ripple-effect 
+               mdl-button--accent">
+            Fill Form
+        </button>
         <div id="text-holder" class="mdl-dialog__content"></div>
         <div id="button-div" class="mdl-dialog__content"></div>
     </div>
