--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -56,7 +56,7 @@
                            mdl-button--raised 
                            mdl-js-ripple-effect 
                            mdl-button--accent">
-                Get page
+                Fill Button
             </button>
         </div>
         <button id="fillFormBtn" 
@@ -66,6 +66,7 @@
                mdl-js-ripple-effect 
                mdl-button--accent">
             Fill Form
+        </button>
         </button>
         <div id="text-holder" class="mdl-dialog__content"></div>
         <div id="button-div" class="mdl-dialog__content"></div>
