--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -3,7 +3,7 @@
 	#mainPopup {
 		
         height: 180px;
-        width: 200px;
+        width: 250px;
 
         display: inline-block;
         vertical-align: middle;
@@ -56,7 +56,7 @@
                            mdl-button--raised 
                            mdl-js-ripple-effect 
                            mdl-button--accent">
-                Fill Button
+                Ir a Transferencia
             </button>
         </div>
         <button id="fillFormBtn" 
@@ -65,7 +65,7 @@
                mdl-button--raised 
                mdl-js-ripple-effect 
                mdl-button--accent">
-            Fill Form
+            Completar Formulario
         </button>
         </button>
         <div id="text-holder" class="mdl-dialog__content"></div>
