--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -1,38 +1,9 @@
 <!doctype html>
-<style type="text/css">
-	#mainPopup {
-		
-        height: 180px;
-        width: 250px;
-        display: inline-block;
-        vertical-align: middle;
-        line-height: normal;
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
-	}
-    #appinfo {
-        background-color: #ff4081;
-        border: 0;
-        color: #FFFFFF;
-        display: block;
-        font-size: 85%;
-        line-height: 1.2;
-        margin: 0;
-        padding: calc(0.1em + 1px) 0;
-        position: relative;
-        text-align: center;
-    }
-	h1 {
-		font-size: 2em;
-	}
-    div {
-        text-align:center
-    }
-    button {
-        text-align: center;
-    }
-</style>
+
 
 <head>
+    <link rel="stylesheet" type="text/css" href="popup.css">
+
     <script src="bank_action.js"></script>
     <script src="../../js/jquery-3.2.1.min.js"></script>
     <script src="../../js/mdl/material.min.js"></script>
@@ -43,28 +14,26 @@
     <span id="appinfo"><span id="appname">Autopac</span> <span id="version">0.0.2</span></span>
 
     <div id="mainPopup">
-        <h1>Hello!</h1>
+        <img src="../../icons/promo.png">
         <div id="main-button-div" class="mdl-dialog__content">
             <button id="mainButton" 
                     class="mdl-button 
-                           mdl-js-button 
                            mdl-button--raised 
-                           mdl-js-ripple-effect 
-                           mdl-button--accent">
-                Ir a Transferencia
+                           mdl-button--colored">
+                    Ir a Transferencia
             </button>
         </div>
-        <button id="fillFormBtn" 
-            class="mdl-button 
-               mdl-js-button 
-               mdl-button--raised 
-               mdl-js-ripple-effect 
-               mdl-button--accent">
-            Completar Formulario
-        </button>
+
         </button>
         <div id="text-holder" class="mdl-dialog__content"></div>
-        <div id="button-div" class="mdl-dialog__content"></div>
+        <div id="button-div" class="mdl-dialog__content">
+            <button id="fillFormBtn" 
+                class="mdl-button   
+                       mdl-button--raised 
+                       mdl-button--colored">
+                Completar Formulario
+            </button>
+        </div>
     </div>
 </body>
 
