feat(button): Merge 2 buttons in one button+ funtion()

--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -11,29 +11,26 @@
 </head>
 
 <body>
-    <span id="appinfo"><span id="appname">Autopac</span> <span id="version">0.0.2</span></span>
+    <span id="appinfo"><span id="appname"></span> <span id="version"></span></span>
 
     <div id="mainPopup">
-        <img src="../../icons/promo.png">
         <div id="main-button-div" class="mdl-dialog__content">
-            <button id="mainButton" 
-                    class="mdl-button 
-                           mdl-button--raised 
+            <button id="mainButton"
+                    class="mdl-button
+                           mdl-button--raised
                            mdl-button--colored">
-                    Ir a Transferencia
+                    AutoPAC
             </button>
         </div>
 
         </button>
-        <div id="text-holder" class="mdl-dialog__content"></div>
-        <div id="button-div" class="mdl-dialog__content">
-            <button id="fillFormBtn" 
-                class="mdl-button   
-                       mdl-button--raised 
-                       mdl-button--colored">
-                Completar Formulario
-            </button>
+        <div id="text-holder" class="mdl-dialog__content">
+          <p>
+          Datos del deposito <br><br>
+          Deposito mensual: 50 000 <br>
+          Primer deposito: 1-1-2018 <br>
+          Duracion: Indefinida <br>
+        </p>
         </div>
     </div>
 </body>
-
