feature(): add more options to fill at opciones

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -14,8 +14,25 @@
 	Monto:<br>
 	<input type="number" id="monto">
 	<br>
+	Nombre Destinatario:<br>
+	<input type="text" id="nombreDestinatario">
+	<br>
 	Rut Destinatario:<br>
 	<input type="text" id="rutDestinatario">
+	<br>
+	Banco Destinatario:<br>
+	<input type="text" id="bancoDestinatario">
+	<br>
+	Numero de Cuenta Destinatario:<br>
+	<input type="text" id="numeroCuentaDestinatario">
+	<br>
+	Tipo de Cuenta Destinatario:<br>
+	<select id="tipoCuentaDestinatario">
+		<option></option>
+		<option>corriente</option>
+		<option>vista</option>
+		<option>ahorro</option>
+	</select>
 	<br>
 	Fecha Inicio:<br>
 	<input type="date" id="fechaInicio">
