feat():  add auto fill destinatario if it was not present

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -34,6 +34,9 @@
 		<option>ahorro</option>
 	</select>
 	<br>
+	Mail Destinatario:<br>
+	<input type="text" id="mailDestinatario">
+	<br>
 	Fecha Inicio:<br>
 	<input type="date" id="fechaInicio">
 	<br>
