first release branch

--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -2,35 +2,33 @@
 
 
 <head>
-    <link rel="stylesheet" type="text/css" href="popup.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="popup.css">
 
-    <script src="bank_action.js"></script>
-    <script src="../../js/jquery-3.2.1.min.js"></script>
-    <script src="../../js/mdl/material.min.js"></script>
-    <link rel="stylesheet" href="../../js/mdl/material.min.css"></script>
+  <script src="bank_action.js"></script>
+  <script src="../../js/jquery-3.2.1.min.js"></script>
+  <script src="../../js/mdl/material.min.js"></script>
+  <link rel="stylesheet" href="../../js/mdl/material.min.css">
+  </script>
 </head>
 
 <body>
-    <span id="appinfo"><span id="appname"></span> <span id="version"></span></span>
+  <span id="appinfo"><span id="appname"></span> <span id="version"></span></span>
 
-    <div id="mainPopup">
-        <div id="main-button-div" class="mdl-dialog__content">
-            <button id="mainButton"
-                    class="mdl-button
+  <div id="mainPopup">
+    <div id="main-button-div" class="mdl-dialog__content">
+      <button id="mainButton" class="mdl-button
                            mdl-button--raised
                            mdl-button--colored">
                     AutoPAC
             </button>
-        </div>
-
-        </button>
-        <div id="text-holder" class="mdl-dialog__content">
-          <p>
-          Datos del deposito <br><br>
-          Deposito mensual: 50 000 <br>
-          Primer deposito: 1-1-2018 <br>
-          Duracion: Indefinida <br>
-        </p>
-        </div>
     </div>
+
+    </button>
+    <div id="text-holder" class="mdl-dialog__content">
+      <p>
+        Datos del depósito <br><br> Depósito mensual: 50 000 <br> Primer depósito: 1-1-2018 <br> Duración: Indefinida <br>
+      </p>
+    </div>
+  </div>
 </body>
