feature(options): default option now available; also made some refactors

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="./TransferenciaOptions.js"></script>
 	<script src="./options.js" defer></script>
-	<link rel="stylesheet" href="../../js/mdl/material.min.css">
-	<script src="../../js/mdl/material.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<!-- <link rel="stylesheet" href="../../js/mdl/material.min.css"> -->
+	<!-- <script src="../../js/mdl/material.min.js"></script> -->
+	<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
 	<title>AutoPac Options</title>
 
 </head>
