--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -1,54 +1,33 @@
 <!doctype html>
-<style type="text/css">
-	#mainPopup {
-		
-        height: 180px;
-        width: 200px;
 
-        display: inline-block;
-        vertical-align: middle;
-        line-height: normal;
-
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
-	}
-    #appinfo {
-        background-color: #ff4081;
-        border: 0;
-        color: #FFFFFF;
-        display: block;
-        font-size: 85%;
-        line-height: 1.2;
-        margin: 0;
-        padding: calc(0.1em + 1px) 0;
-        position: relative;
-        text-align: center;
-    }
-
-	h1 {
-		font-size: 2em;
-	}
-    div {
-        text-align:center
-    }
-    button {
-        text-align: center;
-
-    }
-
-</style>
 
 <head>
-    <script src="../../js/jquery-3.2.1.min.js"></script>
-    <script src="../../js/mdl/material.min.js"></script>
-    <link rel="stylesheet" href="../../js/mdl/material.min.css"></script>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="popup.css">
+
+  <script src="bank_action.js"></script>
+  <script src="../../js/jquery-3.2.1.min.js"></script>
+  </script>
 </head>
 
 <body>
-    <span id="appinfo"><span id="appname">Autopac</span> <span id="version">0.0.2</span></span>
 
-    <div id="mainPopup">
-        <h1>Hello Fintual!</h1>
+  <div id="mainPopup">
+    <div>
+        <input id="requester" value="https://fintual.cl/" readonly="readonly">
     </div>
+    <div>
+      <p id="text-holder">
+
+      </p>
+    </div>
+
+    <div id="main-button-div" >
+        <button id="main-button" >
+                    Continuar
+        </button>
+    </div>
+  </div>
 </body>
 
 
