feat(background): web pages can read chrome storage

--- a/src/browser_action/bank_action.html
+++ b/src/browser_action/bank_action.html
@@ -26,6 +26,9 @@
       <button id="main-button" >
                     Agendar
       </button>
+      <button id="ok-button" style="display: none;">
+        OK
+      </button>
     </div>
   </div>
 </body>
