load data from external page

--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -1,5 +1,7 @@
 <!doctype html>
 
+<!doctype html>
+
 
 <head>
   <meta charset="UTF-8">
@@ -11,21 +13,24 @@
 </head>
 
 <body>
-
   <div id="mainPopup">
     <div>
         <input id="requester" value="https://fintual.cl/" readonly="readonly">
     </div>
     <div>
       <p id="text-holder">
-
+          Continúa para agendar tu transferencia mensual hacia:
+          <br>
       </p>
     </div>
 
     <div id="main-button-div" >
-        <button id="main-button" >
-                    Continuar
-        </button>
+      <button id="main-button" style="display: none;">
+                    OK
+      </button>
+      <button id="ok-button" style="display: inline;">
+        OK
+      </button>
     </div>
   </div>
 </body>
