--- a/src/options/options.html
+++ b/src/options/options.html
@@ -53,6 +53,7 @@
 	<br>
 	<input type="button" value="Save" id="save">
 	<input type="button" value="Get" id="get">   
+	<input type="button" value="Send" id="send"> 
 
 </form>
 
