fix(santander_fun): fixed promise when the page load a new form

--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -1,7 +1,5 @@
 <!doctype html>
 
-<!doctype html>
-
 
 <head>
   <meta charset="UTF-8">
@@ -19,7 +17,7 @@
     </div>
     <div>
       <p id="text-holder">
-          Continúa para agendar tu transferencia mensual hacia:
+          Dirigete a tu banco para agendar tu transferencia mensual hacia:
           <br>
       </p>
     </div>
