style(): add documentation, clean some comments, delete unused files and functions

--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -17,17 +17,16 @@
     </div>
     <div>
       <p id="text-holder">
-          Dirigete a tu banco para agendar tu transferencia mensual hacia:
+          Dirigete a la página de tu banco e ingresa para agendar tu transferencia mensual hacia:
           <br>
       </p>
     </div>
-
     <div id="main-button-div" >
       <button id="main-button" style="display: none;">
                     OK
       </button>
       <button id="ok-button" style="display: inline;">
-        OK
+        ...
       </button>
     </div>
   </div>
