feat(fintual_action): new js for <requester>_action popup

--- a/src/browser_action/fintual_action.html
+++ b/src/browser_action/fintual_action.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="popup.css">
 
-  <script src="bank_action.js"></script>
+  <script src="fintual_action.js"></script>
   <script src="../../js/jquery-3.2.1.min.js"></script>
   </script>
 </head>
@@ -22,11 +22,8 @@
       </p>
     </div>
     <div id="main-button-div" >
-      <button id="main-button" style="display: none;">
-                    OK
-      </button>
       <button id="ok-button" style="display: inline;">
-        ...
+        OK
       </button>
     </div>
   </div>
